--- a/frontend/public/homepage/style.css
+++ b/frontend/public/homepage/style.css
@@ -1,5 +1,5 @@
 .navbar {
-    position: absolute;
+    position: relative;
     top: 0;
     display: flex;
     margin-right: 5vw;
@@ -52,4 +52,24 @@
     display: flex;
     justify-content: space-around;
     margin: 0;
+}
+
+.carousel {
+    position: relative;
+    top: 0;
+    z-index: -1;
+}
+
+#myCarousel {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.carousel-image {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
 }
