halfway done with products

--- a/frontend/public/homepage/style.css
+++ b/frontend/public/homepage/style.css
@@ -388,3 +388,38 @@ font-size: 5rem;
     height: auto;
     object-fit: contain;
 }
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(26rem, 1fr));
+    gap: 20px;
+    margin-top: 3rem;
+    padding: 0 4rem;
+}
+
+.grid-item {
+    background-color: #f0f0f0;
+    padding: 20px;
+    text-align: center;
+    height: 300px;
+}
+
+.grid-image{
+    width: 100%;
+    height: 60%;
+
+}
+
+@media (max-width: 768px) {
+    .grid-container {
+        grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+    }
+}
+
+.grid-item img {
+    width: 100%; /* Ensure the image takes up the full width of the container */
+    height: 100%; /* Ensure the image takes up the full height of the container */
+    object-fit: cover; /* Crop the image to fit the container while maintaining aspect ratio */
+  }
+
+
